# InterpreterLoop

./: CMakeLists.txt  executor.c  expressions.c  loader.c  loop.c  result.txt  test_program_1.txt  test_program_2.txt  test_program_3.txt  tokenReader.c  utilities.c  variables.c
headers/: executor.h  expressions.h  loader.h  loop.h  tokenReader.h  utilities.h  variables.h
